# Projekt-Roboty

./: Dockerfile  README.md
src/robot_control_interface/: package.xml  setup.cfg  setup.py
src/robot_control_interface/launch/: bringup.launch.py
src/robot_control_interface/robot_control_interface/: camera_node.py  controller_node.py
src/robot_control_interface/robot_control_interface/logic/: point_analyzer.py  velocity_logic.py
src/robot_control_interface/robot_control_interface/nodes/: camera_subscriber.py  click_control_node.py  odom_logger.py  velocity_publisher.py
src/robot_control_interface/robot_control_interface/utils/: constants.py
src/ur5_project/: package.xml  setup.cfg  setup.py
src/ur5_project/launch/: project_launch.py
src/ur5_project/ur5_project/: node.py
